#iCMake Time
#parameters for PhiDget.exe + Trace.exe
CONFIGURE_FILE(XPlanePhiDget.txt  ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_BUILD_TYPE}/XPlanePhiDget.txt  COPYONLY)
CONFIGURE_FILE(XPlaneTrace.txt  ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_BUILD_TYPE}/XPlaneTrace.txt  COPYONLY)

CONFIGURE_FILE(initPhyDget.txt  ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_BUILD_TYPE}/initPhyDget.txt  COPYONLY)
CONFIGURE_FILE(initXplane.txt  ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_BUILD_TYPE}/initXPlane.txt  COPYONLY)

#parameters for XPlaneCde.xpl + XPlaneOut.xpl (dll plugin Xplane)
CONFIGURE_FILE(XPlaneCde.txt  ${XPLANE_EXECUTABLE_DIRECTORY}/XPlaneCde.txt  COPYONLY)
CONFIGURE_FILE(XPlaneOut.txt  ${XPLANE_EXECUTABLE_DIRECTORY}/XPlaneOut.txt  COPYONLY)

CONFIGURE_FILE(initPhyDget.txt  ${XPLANE_EXECUTABLE_DIRECTORY}/initPhyDget.txt  COPYONLY)
CONFIGURE_FILE(initXplane.txt  ${XPLANE_EXECUTABLE_DIRECTORY}/initXPlane.txt  COPYONLY)

SET_SOURCE_FILES_PROPERTIES(XPlanePhiDget.txt XPlaneTrace.txt PROPERTIES HEADER_FILE_ONLY TRUE)
SET_SOURCE_FILES_PROPERTIES(XPlaneCde.txt XPlaneOut.txt PROPERTIES HEADER_FILE_ONLY TRUE)
SET_SOURCE_FILES_PROPERTIES(initPhyDget.txt initXplane.txt PROPERTIES HEADER_FILE_ONLY TRUE)

CONFIGURE_FILE(XPlane.fed  ${CERTI_PATH_HOME}/share/federations/XPlane.fed COPYONLY)

#Install Time
INSTALL(FILES XPlanePhiDget.txt XPlaneTrace.txt  DESTINATION bin)
INSTALL(FILES XPlaneCde.txt XPlaneOut.txt DESTINATION bin)
INSTALL(FILES initPhyDget.txt  DESTINATION bin)
INSTALL(FILES XPlaneCde.txt PhiDget.txt XPlaneOut.txt XPlaneTrace.txt  DESTINATION bin)