INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

ADD_LIBRARY(_omt SHARED
    basicdata.h
    basicdata.cpp
    module.h
    module.cpp)

SET_TARGET_PROPERTIES(_omt PROPERTIES PREFIX "")
IF (WIN32)
SET_TARGET_PROPERTIES(_omt PROPERTIES SUFFIX ".pyd")
ENDIF (WIN32)

TARGET_LINK_LIBRARIES(_omt
    ${PYTHON_LIBRARY})

INSTALL(TARGETS _omt
    RUNTIME DESTINATION hla
    LIBRARY DESTINATION hla
    ARCHIVE DESTINATION hla)

# $Id: CMakeLists.txt,v 1.2 2008/10/03 15:02:23 gotthardp Exp $
