INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

ADD_LIBRARY(_omt SHARED
    basicdata.h
    basicdata.cpp
    module.h
    module.cpp)

SET_TARGET_PROPERTIES(_omt PROPERTIES PREFIX "")
IF (WIN32)
SET_TARGET_PROPERTIES(_omt PROPERTIES SUFFIX ".pyd")
ENDIF (WIN32)

IF (CMAKE_BUILD_TYPE MATCHES Debug)
    TARGET_LINK_LIBRARIES(_omt
        ${PYTHON_DEBUG_LIBRARY})
    SET_TARGET_PROPERTIES(_omt PROPERTIES OUTPUT_NAME "_omt_d")
ELSE (CMAKE_BUILD_TYPE MATCHES Debug)
    TARGET_LINK_LIBRARIES(_omt
        ${PYTHON_LIBRARY})
ENDIF (CMAKE_BUILD_TYPE MATCHES Debug)

INSTALL(TARGETS _omt
    RUNTIME DESTINATION hla
    LIBRARY DESTINATION hla
    ARCHIVE DESTINATION hla)

# $Id: CMakeLists.txt,v 1.3 2008/11/15 14:32:25 gotthardp Exp $
