INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

ADD_LIBRARY(_omt SHARED
    basicdata.h
    basicdata.cpp
    module.h
    module.cpp)

IF(NOT PYTHON_DEBUG_LIBRARY)
    SET(PYTHON_DEBUG_LIBRARY ${PYTHON_LIBRARY})
    SET(PYTHON_LIBRARIES ${PYTHON_LIBRARY})
ELSE()
    SET(PYTHON_LIBRARIES
        optimized ${PYTHON_LIBRARY}
        debug ${PYTHON_DEBUG_LIBRARY}
    )
ENDIF()

TARGET_LINK_LIBRARIES(_omt
    ${PYTHON_LIBRARIES}
)

SET_TARGET_PROPERTIES(_omt PROPERTIES DEBUG_OUTPUT_NAME "_omt_d")
SET_TARGET_PROPERTIES(_omt PROPERTIES PREFIX "")
IF (WIN32)
SET_TARGET_PROPERTIES(_omt PROPERTIES SUFFIX ".pyd")
ENDIF (WIN32)

INSTALL(TARGETS _omt
    RUNTIME DESTINATION hla
    LIBRARY DESTINATION hla
    ARCHIVE DESTINATION hla)

# $Id: CMakeLists.txt,v 1.4 2009/07/04 14:10:10 gotthardp Exp $
