CMAKE_MINIMUM_REQUIRED(VERSION 2.6.3)
# The FindRTI.cmake module is available since cmake 2.6.3
FIND_PACKAGE(RTI REQUIRED)

ADD_DEFINITIONS(${RTI_DEFINITIONS})
INCLUDE_DIRECTORIES(${RTI_INCLUDE_DIR} ${PYTHON_INCLUDE_PATH})

ADD_LIBRARY(_rti SHARED
    federateambassador.h
    federateambassador.cpp
    rtiambassador.h
    rtiambassador.cpp
    exceptions.h
    exceptions.cpp
    handles.h
    handles.cpp
    module.h
    module.cpp)

IF(NOT PYTHON_DEBUG_LIBRARY)
    SET(PYTHON_DEBUG_LIBRARY ${PYTHON_LIBRARY})
    SET(PYTHON_LIBRARIES ${PYTHON_LIBRARY})
ELSE()
    SET(PYTHON_LIBRARIES
        optimized ${PYTHON_LIBRARY}
        debug ${PYTHON_DEBUG_LIBRARY}
    )
ENDIF()

TARGET_LINK_LIBRARIES(_rti
    ${RTI_LIBRARIES}
)

if(APPLE)
SET_TARGET_PROPERTIES(_rti PROPERTIES SUFFIX ".so")
SET_TARGET_PROPERTIES(_rti PROPERTIES LINK_FLAGS  "-undefined dynamic_lookup")
endif(APPLE)

SET_TARGET_PROPERTIES(_rti PROPERTIES DEBUG_OUTPUT_NAME "_rti_d")
SET_TARGET_PROPERTIES(_rti PROPERTIES PREFIX "")
IF (WIN32)
SET_TARGET_PROPERTIES(_rti PROPERTIES SUFFIX ".pyd")
ENDIF (WIN32)

INSTALL(TARGETS _rti
    RUNTIME DESTINATION hla
    LIBRARY DESTINATION hla
    ARCHIVE DESTINATION hla)

# $Id: CMakeLists.txt,v 1.5 2009/07/04 14:10:11 gotthardp Exp $
